# Formation_langgraph

./: .gitignore  README.md  chains.py  main.py  pyproject.toml  schemas.py  tool_executor.py
01_DOC/00 Intro a Langgraph/: 00 Intro a Langgraph.md
01_DOC/00_environnemnet/: 00-utiliser-venv-poetry-vscode.md  01_installation environnement du projet.md  03-pb-environnement.md
01_DOC/Apprendr à utiliser le debugger/: 01.1 Comprendre l'outil de debugage dans vs code - FR -En.md
01_DOC/JOURNAL_DE_DEV/: 00_installation-env.md  01_Construction des chaînes d'exécution pour Langgraph.md  11.Construction des chaînes d'exécution pour Langgraph-MIX.md  12. Defining our LangGraph Graph.md  12.1-mermaid.md
01_DOC/JOURNAL_DE_DEV/00_environnemnet/: 00-installation homebrew et poetry pour mac.md  00_installation-env.md  01_installation environnement du projet.md  02-Activer l environnement.md  03-pb-environnement.md
01_DOC/JOURNAL_DE_DEV/00_fiche_syntaxe_python/: 01.0 Prompt.md  01.1 Annotations de type et arguments variables en Python.md  01.2 Annotations de type et arguments variables en Python fr-en.md
01_DOC/JOURNAL_DE_DEV/01_découverte des agents/: 12.2 Defining our LangGraph Graph.md  13. LangSmith Tracing.md  13.1 LangSmith Tracing - fr-en.md
01_DOC/JOURNAL_DE_DEV/02_agent de reflexion/: 15.1 What are we building-fr-en.md  15.1 What are we building.md  16. Section Resources-fr.md  16.1 Section Resources-fr-en.md  25. graph.md  (+8 more)
01_DOC/Utiliser le debuggger/: 01 Comprendre l outil de debugage dans vs code.md  01.1 Comprendre l outil de debugage dans vs code - FR -En.md
