[tool.poetry]
name = "reflectionagent"
version = "0.1.0"
description = "Agent de réflexion utilisant LangChain et LangGraph"
authors = ["Votre Nom <votre.email@exemple.com>"]
readme = "README.md"
package-mode = false  # Ajoutez cette ligne pour éviter l'erreur d'installation du projet racine

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
python-dotenv = ">=1.1.0,<2.0.0"
black = ">=25.1.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"
langchain = ">=0.3.24,<0.4.0"
langchain-openai = ">=0.3.14,<0.4.0"
langgraph = ">=0.3.34,<0.4.0"
grandalf = "^0.8"  # Nécessaire pour visualiser les graphes
langchain-core = "^0.3.56"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"